[memory-infra] Whitelist leveldatabase MDP.

The LevelDB MDP is already whitelisted, but leveldatabase from DBTracker
was not included.

Bug: 750819
Change-Id: I6582a771ac4c1fb9bc14d007deb9e60396ee3306
Reviewed-on: https://chromium-review.googlesource.com/656313
Commit-Queue: Chris Mumford <cmumford@chromium.org>
Reviewed-by: Siddhartha S <ssid@chromium.org>
Cr-Commit-Position: refs/heads/master@{#503324}
Former-commit-id: c1a71e818e43ee2d3cf0adca713b5a9eeae5f609